# init-project

./: README.md  init-project.sh
template/: .gitignore  mypy.ini  pyproject.toml
