[tool.poetry]
name = "name"
version = "0.1"
description = ""
authors = ["Vadim Tokarev <16782067+topor-dev@users.noreply.github.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
mypy = "*"
black = { version = "*", allows-prereleases = true }

[tool.black]
skip-string-normalization = true

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
